feat: aplicação funcionando com leitura da porta correta

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org">
+<html>
 <head>
     <meta charset="UTF-8">
     <title>TatiArt</title>
 </head>
 <body>
-    <h1>🚀 Aplicação da TatiArt no ar!</h1>
+    <h1>🚀 TatiArt está online!</h1>
 </body>
 </html>
