feat: atualiza landing page e integração de imagens por categoria

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -93,12 +93,7 @@
 <body>
 
     <!-- NAVBAR -->
-    <nav>
-        <a href="/">Início</a>
-        <a href="/colecao">Produtos</a>
-        <a href="/sobre">Sobre a Tati</a>
-        <a href="/contato">Contato</a>
-    </nav>
+    <div th:replace="fragments/navbar :: navbar"></div>
 
     <!-- BANNER -->
     <div class="banner">
