--- a/src/main/resources/templates/sobre.html
+++ b/src/main/resources/templates/sobre.html
@@ -1,8 +1,9 @@
 <!DOCTYPE html>
-<html>
+<html xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
     <title>Sobre a Tatiart</title>
+    <link rel="stylesheet" href="/css/estilo.css">
     <style>
         body {
             font-family: sans-serif;
@@ -10,12 +11,32 @@
             margin: 40px auto;
             line-height: 1.6;
         }
+
         h1 {
             color: #f26b1d;
+        }
+
+        p {
+            color: #444;
+        }
+
+        a {
+            display: inline-block;
+            margin-top: 20px;
+            color: var(--marsala);
+            font-weight: bold;
+            text-decoration: none;
+        }
+
+        a:hover {
+            color: var(--marsala-light);
         }
     </style>
 </head>
 <body>
+
+    <div th:replace="fragments/navbar :: navbar"></div>
+
     <h1>Sobre a Tatiart</h1>
     <p>A Tatiart nasceu da paixão por expressar sentimentos através da arte manual.</p>
     <p>Cada peça é feita com dedicação, refletindo autenticidade e propósito.</p>
