Atualiza botão do WhatsApp e integração do Instagram

--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -229,3 +229,8 @@ blockquote::before {
   color: var(--burgundy-light);
   opacity: 0.3;
 }
+
+/*Elfysgiht*/
+.eapps-widget-toolbar {
+  display: none !important;
+}
