Criação da página sobre

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -59,12 +59,12 @@
         <i class="fas fa-bars text-xl"></i>
       </button>
       
-      <nav class="hidden md:flex space-x-8">
-        <a href="index.html" class="text-burgundy-800 hover:text-burgundy-600 font-medium">Home</a>
-        <a href="produtos.html" class="text-burgundy-800 hover:text-burgundy-600 font-medium">Produtos</a>
-        <a href="sobre-a-tati.html" class="text-burgundy-800 hover:text-burgundy-600 font-medium">Sobre Nós</a>
-        <a href="#" class="text-burgundy-800 hover:text-burgundy-600 font-medium">Contato</a>
-      </nav>
+        <nav class="hidden md:flex space-x-8">
+          <a href="/" class="text-burgundy-800 hover:text-burgundy-600 font-medium">Home</a>
+          <a href="/produtos" class="text-burgundy-800 hover:text-burgundy-600 font-medium">Produtos</a>
+          <a href="/sobre" class="text-burgundy-800 hover:text-burgundy-600 font-medium">Sobre Nós</a>
+          <a href="https://wa.me/5511950334870" class="text-burgundy-800 hover:text-burgundy-600 font-medium" target="_blank">Contato</a>
+        </nav>
     </div>
     
     <!-- Mobile Menu -->
@@ -72,7 +72,7 @@
       <div class="container mx-auto px-4 py-3 flex flex-col space-y-3">
         <a href="index.html" class="text-burgundy-800 hover:text-burgundy-600 font-medium py-2">Home</a>
         <a href="produtos.html" class="text-burgundy-800 hover:text-burgundy-600 font-medium py-2">Produtos</a>
-        <a href="sobre-a-tati.html" class="text-burgundy-800 hover:text-burgundy-600 font-medium py-2">Sobre Nós</a>
+        <a href="sobre.html" class="text-burgundy-800 hover:text-burgundy-600 font-medium">Sobre Nós</a>
         <a href="#" class="text-burgundy-800 hover:text-burgundy-600 font-medium py-2">Contato</a>
       </div>
     </div>
@@ -405,6 +405,6 @@
     </div>
   </footer>
 
-  <script src="main.js"></script>
+  <script src="/js/main.js"></script>
 </body>
 </html>
