Corrigindo URL do banco PostgreSQL

--- a/src/main/resources/templates/produto.html
+++ b/src/main/resources/templates/produto.html
@@ -7,7 +7,7 @@
 </head>
 <body>
 
-<div th:replace="~{fragments/navbar :: navbar}"></div>
+<div th:replace="fragments/navbar :: navbar"></div>
 
 <section class="banner">
     <img th:src="${produto.banner}" alt="Banner do Produto" class="banner-img">
