--- a/src/main/resources/templates/produtos.html
+++ b/src/main/resources/templates/produtos.html
@@ -49,9 +49,7 @@
 </head>
 <body class="font-sans">
   <!-- Header/Navigation -->
-  <header class="sticky top-0 bg-white z-50 shadow-sm">
-    <div th:replace="fragments/navbar :: navbar"></div>
-  </header>
+   <div th:replace="~{fragments/navbar :: navbar}"></div>
 
   <!-- Hero Banner -->
   <section class="bg-burgundy-800 py-20 md:py-32 lg:py-44 relative">
