--- a/src/main/resources/templates/sobre.html
+++ b/src/main/resources/templates/sobre.html
@@ -49,9 +49,7 @@
 </head>
 <body class="bg-beige-800 font-sans">
   <!-- Header/Navigation -->
-  <header class="sticky top-0 bg-white z-50 shadow-sm">
-    <div th:replace="fragments/navbar :: navbar"></div>
-  </header>
+   <div th:replace="~{fragments/navbar :: navbar}"></div>
 
     <!-- Hero Section with background -->
     <section class="relative h-[60vh] min-h-[400px] flex items-center justify-center overflow-hidden">
